Update YusufCommandData.java